2010-10-25  Paolo Carlini  <paolo.carlini@oracle.com>

	* libdtrace/drti.c (dprintf): Remove.

2010-10-25  Shujing Zhao  <pearly.zhao@oracle.com>

	* libdtrace/dt_grammar.c: Remove generated file.
	* libdtrace/makefile: Fix BUILD_DIR.
	* libport/makefile: Same.
	* libproc/common/makefile: Same.

2010-10-22  Shujing Zhao  <pearly.zhao@oracle.com>

	* cmd/dtrace.c: Remove.
	* uts/common/sys/elftypes.h: Remove.
	* include/sys/int_types.h: Remove int_fast16_t etc.
	* include/sys/regset.h: Remove gregset_t delaration.

2010-10-21  Shujing Zhao  <pearly.zhao@oracle.com>

	* demo/act/time.d: New.
	* makefile: New.
	* libproc/common/makefile: Fix BUILD_DIR.
	* cmd/common/makefile: Same.
	* libctf/makefile: Same.
	* libdtrace/makefile: Same.
	* libport/makefile: Same.
	* librtld/makefile: Same.

2010-10-15  Shujing Zhao  <pearly.zhao@oracle.com>

	* librtld/rtld_db.c: Comment some functions.
	* cmd/common/makefile: New.
	* include/mutex.h: Declare mutex_init.
	* include/procs_service.h: include elf.h.
	* include/rtld_db.h: Update declaration.
	* include/type_posix.h: Define off64_t.
	* libdtrace/dt_cc.c: Define yylineno.
	* libdtrace/dt_lex.l: Define unput.
	* libdtrace/makefile: Fix compile option.
	* libport/proc_name.c: Define fork1.
	* libport/time.c: Define pthread_cond_reltimedwait_np, mutex_init and
	_lwp_kill.
	* libproc/common/makefile: Fix.
	* libproc/common/Pcontrol.c, libproc/common/Pexecname.c,
	libproc/common/Pzone.c: Comment some lines that are not supported by
	Linux.

2010-09-27  Shujing Zhao  <pearly.zhao@oracle.com>

	* include/rtld_db.h, include/types_off.h: Adjust definition.
	* libctf/makefile: Use /usr/bin/gcc.
	* libport/makefile, libport/p_online.c, libport/tasksys.c: New.
	* libproc/common/makefile: Use -D_LARGEFILE64_SOURCE=1 to make the
	off64_t available.
	* libproc/common/Pzone.c: Comment some functions not be compiled.
	* librtld/rd_elf.c: New.
	* librtld/makefile: Add rd_elf.o to LIB.